--- a/index.html
+++ b/index.html
@@ -125,27 +125,11 @@
 				<p>a piece of happiness to you</p>
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
 				<p>this life is not easy as we thought</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>don't be afraid</p>
-				<p>because...</p>
-				<p>you are not alone in this world</p>
-				<p>because...</p>
 				<p>this year will be better</p>
 				<p>and I hope</p>
 				<p>you'll find...</p>
@@ -158,6 +142,28 @@
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday</p>
+				<p> sry i have some feelings for you </p>
+				<p>i love you</p>
+				<p>from the last birthday of yours</p>
+				<p>i am very happy to be with you in one year</p>
+				<p>and don't worry i will not distrub you</p>
+				<p>again  because you  </p>
+				<p>don't like me </p>
+				<p>thanks for coming in my dreams </p>
+				<p>and also thanks for saying yes when i </p>
+				<p>ask you to come in my dreams</p>
+				<p>you once told me to wait for the</p>
+				<p>princess i love and she will come to me</p>
+				<p>i think you know that that princess is you</p>
+				<p>i am waiting but i think the princess will not come</p>
+				<p>sarange mousumi chuae bogoshipo </p>
+				<p>and sry if i have ever hurt you </p>
+				<p>sry for the photo incident </p>
+				<p>study hard become sucessful</p>
+				<p>nakha re tela lageiki soibu take care</p>
+				<p>good bye tata birla tc </p>
+				<p>enjoy</p>
+				<p>bye</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
