--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
 				<p>that you experiecne today</p>
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
-				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday</p>
 				<p> sry i have some feelings for you </p>
@@ -147,8 +146,7 @@
 				<p>from the last birthday of yours</p>
 				<p>i am very happy to be with you in one year</p>
 				<p>and don't worry i will not distrub you</p>
-				<p>again  because you  </p>
-				<p>don't like me </p>
+				<p>again  because you don't like me </p>
 				<p>thanks for coming in my dreams </p>
 				<p>and also thanks for saying yes when i </p>
 				<p>ask you to come in my dreams</p>
@@ -158,12 +156,11 @@
 				<p>i am waiting but i think the princess will not come</p>
 				<p>sarange mousumi chuae bogoshipo </p>
 				<p>and sry if i have ever hurt you </p>
-				<p>sry for the photo incident </p>
+				<p>sry for the photo incident</p>
 				<p>study hard become sucessful</p>
 				<p>nakha re tela lageiki soibu take care</p>
-				<p>good bye tata birla tc </p>
-				<p>enjoy</p>
-				<p>bye</p>
+				<p>good bye tata birla</p>
+				<p>enjoy bye</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
