--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 				<p>Do you know..?</p>
 				<p>today is just special</p>
 				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
+				<p>that's why Let's make it...</p>
 				<p>the best celebration ever</p>
 				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
@@ -131,8 +130,7 @@
 				<p>May all your wishes come true</p>
 				<p>this life is not easy as we thought</p>
 				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
+				<p>and I hope you'll find...</p>
 				<p>happiness along the way</p>
 				<p>keep your spirits up</p>
 				<p>enjoy every single moment...</p>
@@ -141,7 +139,7 @@
 				<p>and make it the best memory..</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday</p>
-				<p> sry i have some feelings for you </p>
+				<p> i have some feelings for you </p>
 				<p>i love you</p>
 				<p>from the last birthday of yours</p>
 				<p>i am very happy to be with you in one year</p>
