--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
     	<h2 style="color:#F2B300;"></h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">K</h2>
+    	<h2 style="color:#0719D4;">P</h2>
     </div>
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">U</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">N</h2>
+    	<h2 style="color:#8FAD00;">J</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">U</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;"></h2>
@@ -137,28 +137,13 @@
 				<p>that you experiecne today</p>
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
-				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday</p>
-				<p> i have some feelings for you </p>
 				<p>i love you</p>
-				<p>from the last birthday of yours</p>
-				<p>i am very happy to be with you in one year</p>
-				<p>and don't worry i will not distrub you</p>
-				<p>again  because you don't like me </p>
-				<p>thanks for coming in my dreams </p>
-				<p>and also thanks for saying yes when i </p>
-				<p>ask you to come in my dreams</p>
-				<p>you once told me to wait for the</p>
-				<p>princess i love and she will come to me</p>
-				<p>i think you know that that princess is you</p>
-				<p>i am waiting but i think the princess will not come</p>
-				<p>sarange mousumi chuae bogoshipo </p>
-				<p>and sry if i have ever hurt you </p>
-				<p>sry for the photo incident</p>
-				<p>study hard become sucessful</p>
-				<p>nakha re tela lageiki soibu take care</p>
-				<p>good bye tata birla</p>
-				<p>enjoy bye</p>
+				<p>i just want a commitment from you</p>
+				<p>never leave me in my bad days</p>
+				<p>i want to walk the path of life</p>
+				<p>holding your hand</p>
+				<p>i love you miss beautiful chandi</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
