--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     	<h2 style="color:#F2B300;"></h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">P</h2>
+    	<h2 style="color:#0719D4;">V</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">U</h2>
+    	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b4">
     	<h2 style="color:#8FAD00;">J</h2>
@@ -53,7 +53,7 @@
     	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;"></h2>
+    	<h2 style="color:#99C96A;">Y</h2>
     </div>
     <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;"></h2>
@@ -138,12 +138,8 @@
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
 				<p>a very happy birthday</p>
-				<p>i love you</p>
-				<p>i just want a commitment from you</p>
-				<p>never leave me in my bad days</p>
-				<p>i want to walk the path of life</p>
-				<p>holding your hand</p>
-				<p>i love you miss beautiful chandi</p>
+				<p>i love you BRO</p>
+				<p>MAY OUR BROTHER HOOD REMAIN FOR EVER</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
